Backend: + complete order + payment + deploy my app Frontend: + integrate API payment and order + navigate to VNPay web